# INFT2503-2025

./: .gitignore  INFT2503 Øving 2.docx  README.md  v
oving1/: CMakeLists.txt  main.cpp  opgA.cpp  read_temperatures.cpp  tallfil.txt
oving2/: main.cpp
oving3/: CMakeLists.txt  Circle.cpp  Commodity.cpp  main.cpp
oving4/: CMakeLists.txt  main.cpp
oving5/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessBoardPrint.cpp  ChessBoardPrint.h  EchoServer.cpp  main.cpp
oving7/: CMakeLists.txt  Set.cpp  Set.hpp  fraction.cpp  fraction.hpp  main.cpp
oving8/: CMakeLists.txt  Pair.h  equal.h  main.cpp
oving9/: main.cpp
